Fixed project names from overlapping on mobile screens.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -129,6 +129,7 @@ footer {
 
   .project > h2 {
     font-size: 6vw;
+    line-height: 1.2em;
   }
 
   .fa-3x {
@@ -175,10 +176,6 @@ footer {
     font-size: 6vw;
   }
 
-  .project-name {
-    color: black;
-  }
-
   .desc {
     font-size: 4vw;
     line-height: 1.2em;
@@ -186,6 +183,7 @@ footer {
 
   .project > h2 {
     font-size: 6vw;
+    line-height: 1.2em;
   }
 
   .fa-3x {
